--- a/form.html
+++ b/form.html
@@ -34,6 +34,11 @@
                             <input class="dkh-form-field__input" type="email" name="email" id="email" required placeholder="Email">
                             <div class="dkh-form-field__messages"></div>
                         </fieldset>
+                        <div class="dkh-form-field">
+                            <fieldset>
+                              <input class="dkh-form-field__input" name="password" type="password" id="password" required minlength="10" placeholder="Password">
+                            </fieldset>
+                            <div class="dkh-form-field__messages"></div>
                     </div>
                 </div>
                 <div class="dkh-form-footer">
@@ -41,8 +46,6 @@
                 </div>
             </form>
         </main>
-       
-        
         <script src="app.js" async defer></script>
     </body>
 </html>
